--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "webhook-monitor",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo check-types"
   },
   "devDependencies": {
     "prettier": "^3.7.4",
