--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@repo/typescript-config",
-  "version": "0.0.0",
+  "name": "@webhook-monitor/typescript-config",
+  "version": "0.0.1",
   "private": true,
   "license": "MIT",
   "publishConfig": {
