--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "turbo": "^2.8.1",
     "typescript": "5.9.2"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.28.2",
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
+  },
+  "volta": {
+    "node": "22.22.0",
+    "pnpm": "10.28.2"
   }
 }
