--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@webhook-monitor/shared": "workspace:*",
-    "fastify": "^5.2.1"
+    "fastify": "^5.2.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^22.19.7",
