--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@webhook-monitor/shared": "workspace:*",
-    "ioredis": "^5.6.0"
+    "ioredis": "^5.6.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^22.19.7",
