--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@webhook-monitor/worker",
+  "name": "@repo/worker",
   "version": "0.0.1",
   "private": true,
   "type": "module",
@@ -11,13 +11,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@webhook-monitor/shared": "workspace:*",
+    "@repo/shared": "workspace:*",
     "ioredis": "^5.6.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^22.19.7",
-    "@webhook-monitor/typescript-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "tsx": "^4.19.3",
     "typescript": "5.9.2"
   }
