--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@webhook-monitor/db",
+  "name": "@repo/db",
   "version": "0.0.1",
   "private": true,
   "type": "module",
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.19.7",
-    "@webhook-monitor/typescript-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "prisma": "^6.6.0",
     "typescript": "5.9.2"
   }
