feat: implement project authentication middleware and webhook ingestion routes

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@repo/db": "workspace:*",
     "@repo/shared": "workspace:*",
     "fastify": "^5.2.1",
     "zod": "^4.3.6"
