--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo check-types"
+    "check-types": "turbo check-types",
+    "test": "turbo test",
+    "test:coverage": "turbo test -- --coverage"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^4.0.18",
     "prettier": "^3.7.4",
     "turbo": "^2.8.1",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "vitest": "^4.0.18"
   },
   "packageManager": "pnpm@10.28.2",
   "engines": {
