--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@repo/db": "workspace:*",
+    "@repo/queue": "workspace:*",
     "@repo/shared": "workspace:*",
     "fastify": "^5.2.1",
     "zod": "^4.3.6"
