--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,10 +8,13 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "check-types": "tsc --noEmit",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@repo/db": "workspace:*",
+    "@repo/queue": "workspace:*",
     "@repo/shared": "workspace:*",
     "fastify": "^5.2.1",
     "zod": "^4.3.6"
@@ -21,6 +24,7 @@
     "@repo/typescript-config": "workspace:*",
     "pino-pretty": "^13.0.0",
     "tsx": "^4.19.3",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "vitest": "^4.0.18"
   }
 }
