--- a/packages/queue/package.json
+++ b/packages/queue/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.19.7",
+    "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "typescript": "5.9.2",
     "vitest": "^4.0.18"
