--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.19.7",
+    "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "pino-pretty": "^13.0.0",
     "tsx": "^4.19.3",
