--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,12 +2,13 @@
   "name": "@repo/web",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
     "check-types": "tsc --noEmit",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@repo/shared": "workspace:*",
@@ -20,6 +21,7 @@
     "@types/node": "^22.19.7",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "typescript": "5.9.2"
   }
