--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.19.7",
+    "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "tsx": "^4.19.3",
     "typescript": "5.9.2"
