--- a/package.json
+++ b/package.json
@@ -7,23 +7,27 @@
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo check-types",
+    "db:setup": "docker compose up -d && pnpm --filter @repo/db db:setup",
     "test": "turbo test",
     "test:coverage": "turbo test -- --coverage"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^4.0.18",
-    "eslint": "9.39.2",
+    "eslint": "^9.39.2",
     "prettier": "^3.8.1",
-    "turbo": "^2.8.1",
-    "typescript": "5.9.2",
+    "turbo": "^2.8.9",
+    "typescript": "5.9.3",
     "vitest": "^4.0.18"
   },
   "packageManager": "pnpm@10.28.2",
   "engines": {
-    "node": ">=22"
+    "node": ">=24.13.1"
   },
   "volta": {
-    "node": "22.22.0",
+    "node": "24.13.1",
     "pnpm": "10.28.2"
+  },
+  "dependencies": {
+    "dotenv": "^17.3.1"
   }
 }
