feat(worker): implement BullMQ worker with job processor

--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -8,9 +8,12 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "check-types": "tsc --noEmit",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
+    "@repo/queue": "workspace:*",
     "@repo/shared": "workspace:*",
     "ioredis": "^5.9.3",
     "zod": "^4.3.6"
@@ -20,6 +23,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^24.0.0",
     "tsx": "^4.21.0",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vitest": "^4.0.18"
   }
 }
