--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
     branches:
       - main
 
+env:
+  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/webhook_monitor?schema=public
+
 jobs:
   setup:
     name: Setup
@@ -17,7 +20,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 24
+          node-version: 24.13.1
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
@@ -54,7 +57,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 24
+          node-version: 24.13.1
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
@@ -99,7 +102,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 24
+          node-version: 24.13.1
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
@@ -178,7 +181,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 24
+          node-version: 24.13.1
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
@@ -229,7 +232,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 24
+          node-version: 24.13.1
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
