--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
       - main
 
 env:
-  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/webhook_monitor?schema=public
+  # Dummy DATABASE_URL for Prisma client generation (not used for actual connections in most jobs)
+  DATABASE_URL: postgresql://user:password@localhost:5432/dummy_db
 
 jobs:
   setup:
