--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
 
+env:
+  # Dummy DATABASE_URL for Prisma client generation (not used for actual connections in most jobs)
+  DATABASE_URL: postgresql://user:password@localhost:5432/dummy_db
+
 jobs:
   setup:
     name: Setup
@@ -17,7 +21,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24.13.1
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
@@ -54,7 +58,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24.13.1
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
@@ -99,7 +103,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24.13.1
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
@@ -178,7 +182,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24.13.1
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
@@ -229,7 +233,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24.13.1
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
